# AutonomousModelCar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_opencv_nano.sh  build_opencv_pc.sh  build_opencv_raspi.sh  clean.sh  compile.sh  generate_message_types.sh  install_dependencies.bash  install_dependencies.sh  start.sh
MessageTypes/: CamImage.idl
src/: CMakeLists.txt
src/ECU_Communication/: CMakeLists.txt  main.cpp
src/Image_Grabber/: CMakeLists.txt  main.cpp
src/Image_Grabber_py/: main.py
src/Messaging/: CMakeLists.txt  Callback.h  CamImage.h  CamImagePubSubTypes.cxx  CamImagePubSubTypes.h  CamImagePublisher.cxx  CamImagePublisher.h  CamImageSubscriber.cxx  CamImageSubscriber.h  CustomPublisher.cpp  CustomPublisher.cxx  CustomPublisher.h  CustomSubscriber.cpp  CustomSubscriber.cxx  CustomSubscriber.h  PubSubTypes.cpp  PubSubTypes.cxx  PubSubTypes.h  msg.cpp  msg.h
src/Messaging/Types/: CamImage.cxx
src/global_include/Constants/: image.h
